--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "preview": "vite preview",
     "test": "vitest run",
     "test:ci": "vitest run --reporter=junit --outputFile=reports/junit.xml"
-
-
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -20,6 +18,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -29,6 +29,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "jsdom": "^27.3.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4",
